--- a/assets/styles/typography.scss
+++ b/assets/styles/typography.scss
@@ -36,3 +36,8 @@ body {
   color: $dark-blue;
   text-shadow: 0 0 50px $stranger-red;
 }
+
+.win-tie-message {
+  text-align: center;
+  text-shadow: 0 0 50px $stranger-blue;
+}
