Change board when game over condition met.

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -55,6 +55,13 @@ body {
   user-select: none;
 }
 
+.over,
+.over:hover {
+  box-shadow: 0 0 60px $off-white;
+  cursor: none;
+}
+
+
 .background-vid {
   // height: 100vh;
   pointer-events: none;
