Fix tie game bug.
Tie games now trigger game over animation. Change tie game and game
winner messages to be simpler. Remove cursor entire game board while
game over animation plays.

--- a/assets/styles/theme.scss
+++ b/assets/styles/theme.scss
@@ -57,10 +57,15 @@ body {
 
 .over,
 .over:hover {
-  box-shadow: 0 0 60px $off-white;
   cursor: none;
 }
 
+.over.game-cell,
+.over.game-cell:hover,
+.over.clicked,
+.over.clicked:hover {
+  box-shadow: 0 0 60px $off-white;
+}
 
 .background-vid {
   // height: 100vh;
