Change new game button to more defined width.

--- a/assets/styles/breakpoints.scss
+++ b/assets/styles/breakpoints.scss
@@ -86,13 +86,13 @@
 // New game button font-size and line height
 .btn-text {
   @include breakpoint(tiny) {
-    font-size: $new-game-size;
+    font-size: $new-game-size * .9;
     line-height: $new-game-line-height;
   }
 
   @include breakpoint(x-small) {
-    font-size: $new-game-size;
-    line-height: $new-game-line-height * .8;
+    font-size: $new-game-size * .9;
+    line-height: $new-game-line-height * .9;
   }
 
   @include breakpoint(small) {
@@ -152,7 +152,7 @@
   }
 
   @include breakpoint(medium) {
-    width: $background-width + 23vw;
+    width: $background-width;
   }
 
   @include breakpoint(large) {
